--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>React Project</title>
+	<title>Space</title>
 	<script src="main.js" defer></script>
 </head>
 <body>	
